wp-content/themes/warnermusic/assets/scss/base/_global.scss
/* ... */
.button-link-warner.learn-more {
  a {
    min-width: 135px;
    border-radius: 10px;
    border: 1px solid $color__light;
    background-color: transparent;
    font-weight: 600;
    color: $color__light !important;
    &:hover,
    &:focus {
      border-color: $color__main;
      text-decoration: none !important;
      color: $color__bg !important;
      background-color: $color__main !important;
    }
  }
}

.modal-popup {
  animation: show_block 0.5s forwards;
  width: 100%;
  height: 100vh;
  position: fixed;
  top: 0;
  left: 0;
  z-index: 100000;
  background: rgba($color: $color__bg-priamry-4, $alpha: 0.95);
  display: flex;
  align-items: center;
  justify-content: center;
  .button-close {
    position: absolute;
    top: 30px;
    right: 30px;
    cursor: pointer;
    @include tablet {
      right: 15px;
    }
  }
  .group-content-popup {
    padding: 15px;
    width: 100%;
    max-width: 800px;
    height: 464px;
    @include mobile {
      height: 260px;
    }
    iframe {
      background-color: $color__dark;
      border: none;
      width: 100%;
      height: 100%;
    }
  }
}

#overlayer {
  width: 100vw;
  height: 100vh;
  position: fixed;
  z-index: 100000;
  background: $color__dark;
  top: 0;
  left: 0;
  display: flex;
  justify-content: center;
  align-items: center;
}

.loader {
  margin: auto;
  width: 45px;
  height: 70px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  & > div {
    background: $color__light;
    height: 100%;
    width: 4px;
    margin: 0 1px;
    animation: stretch 2s infinite;
    animation-timing-function: cubic-bezier(0.62, 0.28, 0.23, 0.99);
  }
  .r1 {
    animation-delay: -1s;
  }
  .r2 {
    animation-delay: -0.9s;
  }
  .r3 {
    animation-delay: -0.8s;
  }
  .r4 {
    animation-delay: -0.7s;
  }
  .r5 {
    animation-delay: -0.6s;
  }
}
.loader-video {
  width: 50%;
  max-width: 768px;
  height: auto;
  display: block;
  @include desktop {
    width: 80%;
    max-width: 80%;
  }
  @include tablet {
    width: 100%;
    max-width: 100%;
  }
}
.scroll-top {
  position: fixed;
  bottom: 130px;
  right: -50px;
  width: 36px;
  height: 36px;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: $color__dark;
  border: 1px solid $color__bg;
  z-index: 999;
  cursor: pointer;
  @include transition(all 0.3s ease-in-out);
  img {
    @include rotate(-90);
    width: 8px;
    height: auto;
    @include transition(all 0.3s ease-in-out);
  }
  &:hover {
    background-color: $color__bg;
  }
  @include tablet {
    bottom: 107px;
    width: 30px;
    height: 30px;
  }
}
.active-scroll-top {
  right: 50px;
  @include big_screen {
    right: 30px;
  }
  @include mobile {
    right: 15px;
  }
}

.show-on-mobile {
  display: none !important;
  @include desktop {
    display: block !important;
  }
}

.hiden-on-mobile {
  @include desktop {
    display: none !important;
  }
}

.slick-dots {
  display: flex;
  list-style: none;
  margin: 0;
  padding: 0;
  width: fit-content;
  li {
    display: flex;
    align-items: center;
    margin: 0 7px;
    @include tablet {
      margin: 0 6px;
    }
    @include mobile {
      margin: 0 4px;
    }
    &:first-child {
      margin-left: 0;
    }
    &:last-child {
      margin-right: 0;
    }
    button {
      width: 13px;
      height: 13px;
      font-size: 0 !important;
      padding: 0 !important;
      border-radius: 50%;
      color: $color__light;
      background-color: $color__light !important;
      @include transition(all 0.3s ease-in-out);
      @include tablet {
        width: 10px;
        height: 10px;
      }
      @include mobile {
        width: 7px;
        height: 7px;
      }
      &:focus {
        outline: none;
      }
      &:hover {
        color: $color__main;
        background-color: $color__main !important;
      }
    }
    button[aria-label="1 of 1"] {
      display: none;
    }
  }
  .slick-active {
    button {
      background-color: $color__main !important;
    }
  }
}
.slick-arrow {
  position: absolute;
  background-image: url("../images/icon/arrow-right.png");
  font-size: 0;
  background-color: rgba($color: $color__bg-priamry-1, $alpha: 0.9) !important;
  background-size: 10px 20px;
  background-repeat: no-repeat;
  background-position: center;
  width: 45px;
  height: 45px;
  border-radius: 50%;
  padding: 0;
  border: none;
  top: 50%;
  right: -8px;
  @include mobile {
    right: -4px;
  }
  @include translate(0, -50%);
  z-index: 4;
  @include transition(all 0.3s ease-in-out);
  z-index: 10;
}
.slick-arrow.slick-prev {
  background-image: url("../images/icon/arrow-left.png");
  right: unset;
  left: -6px;
  @include mobile {
    left: -2px;
  }
}
.slick-arrow[aria-disabled="true"] {
  opacity: 0.6;
  cursor: no-drop;
}

.marquee {
  overflow: hidden;
  position: relative;
  height: 40px;
  @include tablet {
    height: 30px;
  }
  .list-link-marquee {
    display: block;
    width: 200%;
    position: absolute;
    overflow: hidden;
    animation: marqueeText 13s linear infinite;
    @include tablet {
      animation: marqueeText 6s linear infinite;
    }
    .item-left,
    .item-right {
      float: left;
      width: 50%;
      a,
      span {
        text-align: center;
        font-size: 14px;
        display: inline-block;
        padding: 10px 12px;
        @include tablet {
          font-size: 12px;
          padding: 6px 10px;
        }
        &:hover {
          text-decoration: none !important;
        }
      }
      img {
        height: 20px;
        width: auto;
        @include tablet {
          height: 15px;
        }
      }
    }
  }
}

/*container 1240 on screen 1440px*/
@media screen and (min-width: 1440px) {
  .container {
    max-width: 1210px;
  }
}

@media screen and (min-width: 1600px) {
  .container {
    max-width: 1310px;
  }
}

@media screen and (min-width: 1800px) {
  .container {
    max-width: 1450px;
  }
}

